ingress/polonium.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polonium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.roskenet.de
    secretName: polonium-tls
  rules:
  - host: www.roskenet.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polonium
            port:
              number: 80
